--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="rating">rating</string>
     <string name="written_lines_of_code">written lines of code</string>
     <string name="projects">projects</string>
+    <string name="my_text">I am a good guy.Soon I will be a good programmer. It is my goal.
+            I will not give up - that is for sure! Come on, I see the goal ...
+            The path will lead to the right stage - that is for sure.
+            It is necessary to push and run. We will reach, crawl and reach.I would have much more
+            time to tell and it would be necessary ...
+            I will wait and think, and then I will write.</string>
 </resources>
