--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,7 @@
             The path will lead to the right stage - that is for sure.
             It is necessary to push and run. We will reach, crawl and reach.I would have much more
             time to tell and it would be necessary ...
-            I will wait and think, and then I will write.</string>
+            I will wait and think, and then I will write. My goals do not change.
+            They will alternately be left behind.
+            And success will be obvious. Joy is worthy.</string>
 </resources>
