FrameLayout и RelativeLayout используем для того, чтобы создать возможность наложить кнопку и текст для возможности вызвать выбор фотографии...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
             I will wait and think, and then I will write. My goals do not change.
             They will alternately be left behind.
             And success will be obvious. Joy is worthy.</string>
+    <string name="user_profile_placeholder_image">Изменить фотографию профиля</string>
 </resources>
