Два метода, для получения фото из Галереи и Камеры...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="user_profile_dialog_camera">Сделать снимок</string>
     <string name="user_profile_dialog_cancel">Отмена</string>
     <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
+    <string name="user_profile_chose_message">выберите фото</string>
 </resources>
