--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <string name="ff_regular">sans-serif</string>
+    <string name="ff_medium">sans-serif_medium</string>
+
     <string name="app_name">Skill Branch</string>
     <string name="_5">5</string>
     <string name="rating">rating</string>
@@ -18,4 +21,9 @@
     <string name="user_profile_dialog_cancel">Отмена</string>
     <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
     <string name="user_profile_chose_message">выберите фото</string>
+    <string name="auth.autorization_enter">ВОЙТИ</string>
+    <string name="auth.email">Введите e-mail</string>
+    <string name="auth.password">Введите пароль</string>
+    <string name="auth_login">Войти</string>
+    <string name="auth.remember">Забыли пароль?</string>
 </resources>
